adjusting types of catalog types and test implementing some needed methods